Name:                sunroof-server
Version:             0.2.2
Synopsis:            Monadic Javascript Compiler - Server Utilities
Homepage:            https://github.com/ku-fpg/sunroof-server
Bug-reports:         https://github.com/ku-fpg/sunroof-server
License:             BSD3
License-file:        LICENSE
Author:              Andrew Gill <andygill@ku.edu>, Jan Bracker <jbra@informatik.uni-kiel.de>
Maintainer:          Jan Bracker <jbra@informatik.uni-kiel.de>
Copyright:           (c) 2012 The University of Kansas
Category:            Web, Language, Embedded, Javascript
Stability:           experimental
Build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md
Cabal-version:       >= 1.10
Description:
  Utilities to use Sunroof together with Kansas-Comet to create web applications.

Extra-source-files:
    README.md

Library
  Exposed-modules: Language.Sunroof.Server
  default-language:    Haskell2010
  build-depends:       aeson            >= 0.7   && < 0.9,
                       scientific       >= 0.3.2 && < 0.4,
                       vector           >= 0.7.1,
                       unordered-containers >= 0.1.3.0,
                       base             >= 4.3.1 && < 5,
                       data-default     == 0.5.*,
                       kansas-comet     >= 0.3 && < 0.4,
                       wai-middleware-static >= 0.6 && < 0.8,
                       filepath         >= 1.3      && < 1.5,
                       scotty           >= 0.8      && < 0.10,
                       semigroups       >= 0.9,
                       warp             >= 3.0 && < 3.1,
                       stm              >= 2.2,
                       transformers     >= 0.3 && < 0.5,
                       text             >= 0.11,
                       time             >= 1.4,
                       sunroof-compiler == 0.2.*
  GHC-options: -Wall

  if impl(ghc < 7.7)
    build-depends:     tagged           >= 0.3

source-repository head
  type:     git
  location: git@github.com:ku-fpg/sunroof-server.git
