Name:                sunroof-server
Version:             0.2.2
Synopsis:            Monadic Javascript Compiler - Server Utilities
Homepage:            https://github.com/ku-fpg/sunroof-server
Bug-reports:         https://github.com/ku-fpg/sunroof-server
License:             BSD3
License-file:        LICENSE
Author:              Andrew Gill <andygill@ku.edu>, Jan Bracker <jbra@informatik.uni-kiel.de>
Maintainer:          Jan Bracker <jbra@informatik.uni-kiel.de>
Copyright:           (c) 2012 The University of Kansas
Category:            Web, Language, Embedded, Javascript
Stability:           experimental
Build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md
Cabal-version:       >= 1.10
Description:
  Utilities to use Sunroof together with Kansas-Comet to create web applications.

Extra-source-files:
    README.md

Library
  Exposed-modules: Language.Sunroof.Server
  default-language:    Haskell2010
  build-depends:       aeson                 >= 0.7   && < 0.9,
                       base                  >= 4.3.1 && < 5,
                       data-default-class    == 0.0.*,
                       filepath              >= 1.3   && < 1.5,
                       kansas-comet          >= 0.3   && < 0.4,
                       scotty                >= 0.8   && < 0.10,
                       scientific            >= 0.3.2 && < 0.4,
                       semigroups            >= 0.9,
                       stm                   >= 2.2,
                       sunroof-compiler      == 0.2.*,
                       tagged                >= 0.3,
                       text                  >= 0.11,
                       time                  >= 1.4,
                       transformers          >= 0.3   && < 0.5,
                       unordered-containers  >= 0.1.3.0,
                       vector                >= 0.7.1,
                       wai-middleware-static >= 0.6   && < 0.8,
                       warp                  >= 3.0   && < 3.1
  GHC-options: -Wall

source-repository head
  type:     git
  location: git@github.com:ku-fpg/sunroof-server.git
